Fixing spacing of tags

--- a/index.css
+++ b/index.css
@@ -80,8 +80,7 @@ nav a{
     width: 100%;
     font-size: calc(2px + 2vw);
     border: 4px solid #395c6b;
-    padding: 15px 26px;
-    margin: 10px;
+    padding: 17px 26px;
 }
 
 main{
